# Custom-Messages-ROS-Java-System-Example

./: .gitignore  README.md  settings.gradle
.github/workflows/: build.yml
custom-ros-messages/: build.gradle
custom-ros-messages/src/main/resources/custom_msgs/: CMakeLists.txt  package.xml
custom-ros-messages/src/main/resources/custom_msgs/msg/: RosCustomMessage.msg
custom-ros-messages/src/main/resources/custom_msgs/srv/: CustomAddition.srv
custom-ros-messages/src/test/java/msgscreation/: MessagesTest.java
ros-app/: build.gradle
ros-app/src/main/java/eu.spyros.koukas.ros.examples/: CustomROSJavaClientNodeMain.java  CustomROSJavaPublisherNodeMain.java  CustomROSJavaServerNodeMain.java  CustomROSJavaSubscriberNodeMain.java  Main.java  MainExternal.java
ros-app/src/main/resources/: log4j2.xml
